package com.pseandroid2.dailydata.repository.viewModelAPI.communicationClasses

enum class DataType {
    WHOLE_NUMBER,
    FLOATING_POINT_NUMBER,
    TIME,
    STRING
    //Todo Fields
}