package com.pseandroid2.dailydata.repository.viewModelAPI.communicationClasses

enum class DotSize {
    SMALL,
    MEDIUM,
    BIG
    //Todo Fields
}