package com.pseandroid2.dailydata.repository.viewModelAPI.communicationClasses

enum class LineType {
    DOTTED,
    NONE,
    CONTINUOUS
    //Todo Fields
}