package com.pseandroid2.dailydata.repository.viewModelInterface.communicationClasses

data class Button(
    val id: Long,
    val name: String,
    val columnId: Long,
    val value: Int
)
