package com.pseandroid2.dailydata.repository.viewModelInterface.communicationClasses

data class Member(
    val id: Long,
    val name: String
)
